--- a/index.html
+++ b/index.html
@@ -90,4 +90,15 @@
       document.body.appendChild(script);
     </script>
   </body>
+  <script>
+ if ('serviceWorker' in navigator) {
+    console.log("Will the service worker register?");
+    navigator.serviceWorker.register('service-worker.js')
+      .then(function(reg){
+        console.log("Yes, it did.");
+     }).catch(function(err) {
+        console.log("No it didn't. This happened:", err)
+    });
+ }
+</script>
 </html>
