--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudo</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="manifest" href="/Sudo/manifest.json">
