--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudo</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="manifest" href="/Sudo/manifest.json">
+    <link rel="manifest" href="/Sudo/manifest.webmanifest">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body class="dark">
